force-app/src/objects/c2g__codaDimension4__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpdimension</customHelpPage>
    <description>Used to sub-analyze postings and can be used to represent a number of different business concepts.</description>
    <fields>
        <fullName>Reporting_Aggregate__c</fullName>
        <description>Reporting Aggregate Dimension 4</description>
        <label>Reporting Aggregate</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost Type</fullName>
                </value>
                <value>
                    <fullName>Recharge Cost</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Registration Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DateFrom__c</fullName>
        <description>If the period start and end date of the document match or are within the dates mentioned in the Date From and Date To fields in the Posting Effective Dates section of the dimension, then that dimension is available to be assigned to that document.</description>
        <inlineHelpText>If the period start date and end date of the document match or are within the dates mentioned in the Date From and Date To fields, then this dimension can be assigned to that document.</inlineHelpText>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DateTo__c</fullName>
        <description>If the period start and end date of the document match or are within the dates mentioned in the Date From and Date To fields in the Posting Effective Dates section of the dimension, then that dimension is available to be assigned to that document.</description>
        <inlineHelpText>If the period start date and end date of the document match or are within the dates mentioned in the Date From and Date To fields, then this dimension can be assigned to that document.</inlineHelpText>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, indicates that values for this dimension are not in use. To assign to documents, mappings, or definitions, it must not be selected. Default is not selected.</description>
        <inlineHelpText>When selected, indicates that values for this dimension are not in use. To assign to documents, mappings, or definitions, it must not be selected.</inlineHelpText>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__PostingAllowed__c</fullName>
        <description>By default, this field is set to “All Dates” which allows this dimension to be assigned to any document irrespective of its period. You can set it to “Select Dates” and specify the dates in the Date From and Date To fields. This makes the dimension available for posting only those documents that have the period start and end dates within the dates mentioned here.</description>
        <inlineHelpText>The “All Dates” option allows you to associate this dimension with documents assigned to any period. The “Select Dates” option allows you to specify the dates in the Date From and Date To fields. This makes the dimension available for posting only those documents that have the period start and end dates within the dates mentioned here.</inlineHelpText>
        <label>Allow Posting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Dates</fullName>
                    <default>true</default>
                    <label>All Dates</label>
                </value>
                <value>
                    <fullName>Select Dates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ReportingCode__c</fullName>
        <description>An alternative name or code intended for reporting</description>
        <label>Reporting Code</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__TypeDescription__c</fullName>
        <description>Description of the dimension type.</description>
        <label>Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <description>ID used to identify the dimension type.</description>
        <label>Type</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dimension 4</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>c2g__ReportingCode__c</columns>
        <columns>Reporting_Aggregate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dimension 4</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>